style.css
/* ... */
@media screen and (max-width: 1000px) {
    .league_button, .league_button_history{
        font-size: 4vw;
        margin-left: 15px;
        margin-right: 15px;
    }
    .league_button_history_small, .league_button_history_small2{
        font-size: 20px;
        margin-top: 5px;
    }
    .spread_bet{
        font-size: 20px;
    }
}

@media screen and (max-width: 700px) {
    .league_button, .league_button_history{
        font-size: 5vw;
        margin-left: 15px;
        margin-right: 15px;
    }
    .league_button_history_small, .league_button_history_small2{
        font-size: 15px;
        margin-top: 0px;
    }
}

@media screen and (max-width: 550px) {
    .league_button, .league_button_history{
        font-size: 6.5vw;
        margin-left: 15px;
        margin-right: 15px;
    }
    .league_button_history_small, .league_button_history_small2{
        font-size: 15px;
        margin-top: 0px;
    }
}

.bet_history{
    margin-top: 5%;
}
#moneygraph, #ratiograph{
   width: 100%;
    height:100%;
}

.graph_landing{
    margin: auto;
    width: 450px;
    height: 300px;
}
.graph_button{
    z-index: 5;
}

.faq_link{
    font-size: 20px;
    color: deepskyblue;
    padding:10px;
    font-weight: bold;
}
.faq_link:hover{
    cursor: pointer;
    color: darkblue;
}
.faq_modal{
    font-size: 20px;
    text-align: left;
}
.faq_info{
    border: solid 2px black;
    background-color: lightgrey;
    text-align: left;
}
/*used on faq page to make image fit in modal*/
.modal_color img{
    width: 90%;
    height: auto;
    margin: 20px;
}

.dates_input{
    text-align: center;
}

.search_button,.search_input {
    display: inline-block;
    border: solid 4px black;
    height: 100%;
    width: 54%;
    font-size: 25px;
    line-height: 40px;
    background-color: white;
    color: black;
    margin-right: -4px;
}
.search_button {
    width: 10%;
    background-color: lightgrey;
    color: deepskyblue;
    margin-right: -4px;
    font-weight: bolder;
}
.search_button:hover {
    background-color: darkgray;
}

.error{
    color: red;
    font-size: 20px;
}
.sign_up{
    float: right;
    text-align: center;
    width: 47%;
    line-height: 35px;
    font-size: 25px;
    margin: auto;
    color:white;
    background-color: black;
    opacity: .9;
    border: black 4px solid;
    margin-top: 10px;
}
.sign_up:hover{
    cursor: pointer;
    color: deepskyblue;
}

.guest_login{
    text-align: center;
    width: 47%;
    line-height: 35px;
    font-size: 25px;
    margin: auto;
    color:white;
    background-color: black;
    opacity: .9;
    border: black 4px solid;
    margin-top: 10px;
}
.guest_login:hover{
    cursor: pointer;
    color: deepskyblue;
}
.guest_signup{
    width: 100%;
}

.sign_up_menu{
    display: none;
}

.warning,.warning2 {
    font-size: 20px;
    font-weight: bold;
    color: red;
    display: none;
    margin-left: 5%;
}

.warning3 {
    font-size: 25px;
    font-weight: bold;
    color: red;
    margin-left: 5%;
}

.input_signup{
    margin-top: 10px;
    background-color: rgba(255,255,255,.5);
    height: 45px;
    width: 93%;
    border: black 4px solid;
    color: black;
    font-size: 25px;
    z-index: 5;
    padding-left: 5%;
}

.user_login_notclick{
    text-align: center;
    width: 100%;
    line-height: 45px;
    font-size: 25px;
    margin: auto;
    color:white;
    background-color: black;
    opacity: .5;
    border: black 4px solid;
    margin-top: 15px;
    pointer-events: none;
}

@media screen and (max-height: 900px) {
    .input_signup{
        background-color: rgba(255,255,255,.5);
        height: 35px;
        width: 93%;
        color: black;
        font-size: 25px;
        z-index: 5;
        padding-left: 5%;
    }
    .user_login, .user_login2, .guest_login, .sign_up{
        line-height: 35px;
        font-size: 25px;
    }
    .user_login_notclick{
        text-align: center;
        width: 100%;
        line-height: 35px;
        font-size: 25px;
        margin: auto;
        color:white;
        background-color: black;
        opacity: .5;
        border: black 4px solid;
        margin-top: 10px;
        pointer-events: none;
    }
}

@media screen and (max-height: 830px) {
    .input_signup{
        background-color: rgba(255,255,255,.5);
        height: 25px;
        width: 93%;
        color: black;
        font-size: 20px;
        z-index: 5;
        padding-left: 5%;
    }
    .user_login, .user_login2, .guest_login, .sign_up{
        line-height: 25px;
        font-size: 20px;
    }
    .user_login_notclick{
        text-align: center;
        width: 100%;
        line-height: 25px;
        font-size: 20px;
        margin: auto;
        color:white;
        background-color: black;
        opacity: .5;
        border: black 4px solid;
        margin-top: 10px;
        pointer-events: none;
    }
}


*::-webkit-media-controls-panel {
    display: none!important;
    -webkit-appearance: none;
}

/* Old shadow dom for play button */

*::--webkit-media-controls-play-button {
    display: none!important;
    -webkit-appearance: none;
}

/* New shadow dom for play button */

/* This one works */

*::-webkit-media-controls-start-playback-button {
    display: none!important;
    -webkit-appearance: none;
}

